Removed unneeded lines